welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:38: error: not found: value BaisseBrosse
  BaisseBrosse()
  ^