welcome.lessons.welcome.traversal.Snake.scala.code
def estFinal () :Boolean={
  if (estFaceMur) {
    if (getDirection == Direction.EAST) {
      gauche()
      if (estFaceMur) {
        return true
      } else {return false} 
		gauche()
    gauche()
    gauche()
    } else {
      droite()
      if (estFaceMur) {
        return true
      } else {return false}
    droite()
    droite()
    droite()
    }
  } 
  return false
}

def monte() {
  if (getDirection == Direction.EAST) {
    gauche()
    avance()
    gauche()
  } else {
    droite()
    avance()
    droite()
  }
}


override def run() {
  BaisseBrosse()
  while (!estFinal())
 		if (estFaceMur) {
    monte()
  } else avance()
}